# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/test.gni")

module_output_path = "location/service"
ohos_unittest("LocationFenceTest") {
  module_out_path = module_output_path
  sources = [
    "$LOCATION_ROOT_DIR/test/location_fence/source/location_fence_test.cpp",
    "$LOCATION_ROOT_DIR/test/mock/src/mock_common_utils.cpp",
  ]

  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
    "$LOCATION_ROOT_DIR/test/location_fence/include",
    "$LOCATION_ROOT_DIR/test/mock/include",
  ]

  deps = [
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "location:lbsservice_common",
    "location:locator_sdk",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  module_out_path = module_output_path
}

group("unittest") {
  testonly = true
  deps = []
  deps += [ ":LocationFenceTest" ]
}
