# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

SUBSYSTEM_DIR = "//base/location/services"
module_output_path = "location/service"

ohos_unittest("GeocodeServiceAbilityTest") {
  module_out_path = module_output_path
  sources = [
    "//base/location/test/location_geocode/source/geo_convert_service_test.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/location_geocode/geocode/include",
    "$SUBSYSTEM_DIR/location_locator/locator/include",
    "//base/location/interfaces/inner_api/include",
    "//base/location/test/location_geocode/include",
    "//base/location/test/location_locator/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/location_locator/locator:lbsservice_locator",
    "//base/location/frameworks/location_common/common:lbsservice_common",
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]

  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  module_out_path = module_output_path
}

group("unittest") {
  testonly = true
  deps = []
  deps += [ ":GeocodeServiceAbilityTest" ]
}
