# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/test.gni")

module_output_path = "location/service"

if (location_feature_with_gnss) {
  GNSS_UNIT_TEST_DIR = "$LOCATION_ROOT_DIR/test/location_gnss"
  ohos_unittest("GnssAbilityTest") {
    module_out_path = module_output_path
    sources = [
      "$GNSS_UNIT_TEST_DIR/mock/src/mock_i_cellular_data_manager.cpp",
      "$GNSS_UNIT_TEST_DIR/source/gnss_ability_stub_test.cpp",
      "$GNSS_UNIT_TEST_DIR/source/gnss_ability_test.cpp",
      "$LOCATION_ROOT_DIR/test/mock/src/mock_service_registry.cpp",
    ]

    include_dirs = [
      "$GNSS_UNIT_TEST_DIR/include",
      "$GNSS_UNIT_TEST_DIR/mock/include",
      "$LOCATION_GNSS_ROOT/include",
      "$LOCATION_LOCATOR_ROOT/include",
      "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
      "$LOCATION_ROOT_DIR/test/mock/include",
    ]

    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      blocklist = "./../../cfi_blocklist.txt"
    }
    branch_protector_ret = "pac_ret"

    deps = [
      "$ARKUI_ROOT_DIR/napi:ace_napi",
      "$GOOGLE_TEST_DIR:gmock_main",
      "$GOOGLE_TEST_DIR:gtest_main",
      "$IPC_ROOT_DIR/interfaces/innerkits/ipc_core:ipc_core",
      "$LOCATION_GNSS_ROOT:lbsservice_gnss",
      "$LOCATION_LOCATOR_ROOT:lbsservice_locator",
      "$LOCATION_ROOT_DIR/frameworks/location_common/common:lbsservice_common",
      "$LOCATION_ROOT_DIR/frameworks/native/geofence_sdk:geofence_sdk",
      "$LOCATION_ROOT_DIR/frameworks/native/locator_sdk:locator_sdk",
      "$LOCATION_ROOT_DIR/test/location_locator:LocatorServiceAbilityTest",
      "$SAMGR_ROOT_DIR/safwk/interfaces/innerkits/safwk:system_ability_fwk",
      "$SAMGR_ROOT_DIR/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
      "$SECURITY_ROOT_DIR/access_token/interfaces/innerkits/nativetoken:libnativetoken",
      "$SECURITY_ROOT_DIR/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
      "$START_UP_ROOT_DIR/init/interfaces/innerkits:libbegetutil",
    ]

    external_deps = [
      "ability_base:want",
      "access_token:libaccesstoken_sdk",
      "c_utils:utils",
      "cellular_data:tel_cellular_data_api",
      "common_event_service:cesfwk_innerkits",
      "core_service:tel_core_service_api",
      "distributed_notification_service:ans_innerkits",
      "drivers_interface_location_agnss:liblocation_agnss_proxy_2.0",
      "drivers_interface_location_gnss:liblocation_gnss_proxy_2.0",
      "eventhandler:libeventhandler",
      "hdf_core:libhdi",
      "hdf_core:libpub_utils",
      "hilog:libhilog",
      "hisysevent:libhisysevent",
      "init:libbegetutil",
    ]

    defines = []
    if (location_feature_with_gnss) {
      defines += [ "FEATURE_GNSS_SUPPORT" ]
    }

    if (hdf_drivers_interface_location_agnss_enable) {
      defines += [ "HDF_DRIVERS_INTERFACE_AGNSS_ENABLE" ]
    }

    if (hdf_drivers_interface_location_geofence_enable) {
      external_deps += [
        "drivers_interface_location_geofence:liblocation_geofence_proxy_2.0",
      ]
      defines += [ "HDF_DRIVERS_INTERFACE_GEOFENCE_ENABLE" ]
    }
    if (notification_distributed_notification_service_enable) {
      defines += [ "NOTIFICATION_ENABLE" ]
    }
    if (call_manager_enable) {
      external_deps += [ "call_manager:tel_call_manager_api" ]
      defines += [ "CALL_MANAGER_ENABLE" ]
    }

    if (common_event_service_enable) {
      external_deps += [
        "ability_runtime:extension_manager",
        "common_event_service:cesfwk_innerkits",
      ]
      defines += [ "COMMON_EVENT_SERVICE_ENABLE" ]
    }

    if (sms_mms_enable) {
      defines += [ "SMS_MMS_ENABLE" ]
    }
    module_out_path = module_output_path
  }
} else {
  ohos_unittest("GnssAbilityTest") {
    module_out_path = module_output_path
  }
}

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":GnssAbilityTest" ]
}
